docs(changeset): fixed card overflow element position

--- a/packages/pyro-mui-joy/src/colors/light.css
+++ b/packages/pyro-mui-joy/src/colors/light.css
@@ -286,7 +286,7 @@ $palettes: (primary, neutral, danger, info, success, warning);
     outline: none;
 }
 
-[psc='Joy/Variant/color-inversion'][psc='Joy/Variant/soft'] * {
+:where([psc='Joy/Variant/soft'][psc='Joy/Variant/color-inversion']) * {
     --Badge-ringColor: var(--palette-softBg);
     --shadowChannel: var(--palette-darkChannel);
 
@@ -300,36 +300,36 @@ $palettes: (primary, neutral, danger, info, success, warning);
     --palette-text-secondary: rgba(var(--palette-darkChannel) / 0.8);
     --palette-text-tertiary: rgba(var(--palette-darkChannel) / 0.68);
     --palette-divider: rgba(var(--palette-mainChannel) / 0.32);
-    --variant-plainColor: rgba(var(--palette-darkChannel) / 0.8);
-    --variant-plainHoverColor: rgba(var(--palette-darkChannel) / 1);
-    --variant-plainHoverBg: rgba(var(--palette-mainChannel) / 0.12);
-    --variant-plainActiveBg: rgba(var(--palette-mainChannel) / 0.24);
-    --variant-plainDisabledColor: rgba(var(--palette-mainChannel) / 0.6);
-    --variant-outlinedColor: rgba(var(--palette-mainChannel) / 1);
-    --variant-outlinedBorder: rgba(var(--palette-mainChannel) / 0.4);
-    --variant-outlinedHoverColor: var(--palette-600);
-    --variant-outlinedHoverBorder: var(--palette-300);
-    --variant-outlinedHoverBg: rgba(var(--palette-mainChannel) / 0.12);
-    --variant-outlinedActiveBg: rgba(var(--palette-mainChannel) / 0.24);
-    --variant-outlinedDisabledColor: rgba(var(--palette-mainChannel) / 0.6);
-    --variant-outlinedDisabledBorder: rgba(var(--palette-mainChannel) / 0.12);
-    --variant-softColor: var(--palette-600);
-    --variant-softBg: rgba(var(--palette-mainChannel) / 0.72);
-    --variant-softHoverColor: var(--palette-700);
-    --variant-softHoverBg: var(--palette-200);
-    --variant-softActiveBg: var(--palette-300);
-    --variant-softDisabledColor: rgba(var(--palette-mainChannel) / 0.6);
-    --variant-softDisabledBg: rgba(var(--palette-mainChannel) / 0.08);
-    --variant-solidColor: var(--palette-common-white);
-    --variant-solidBg: var(--palette-600);
-    --variant-solidHoverColor: var(--palette-common-white);
-    --variant-solidHoverBg: var(--palette-500);
-    --variant-solidActiveBg: var(--palette-500);
-    --variant-solidDisabledColor: rgba(var(--palette-mainChannel) / 0.6);
-    --variant-solidDisabledBg: rgba(var(--palette-mainChannel) / 0.08);
+    --palette-plainColor: rgba(var(--palette-darkChannel) / 0.8);
+    --palette-plainHoverColor: rgba(var(--palette-darkChannel) / 1);
+    --palette-plainHoverBg: rgba(var(--palette-mainChannel) / 0.12);
+    --palette-plainActiveBg: rgba(var(--palette-mainChannel) / 0.24);
+    --palette-plainDisabledColor: rgba(var(--palette-mainChannel) / 0.6);
+    --palette-outlinedColor: rgba(var(--palette-mainChannel) / 1);
+    --palette-outlinedBorder: rgba(var(--palette-mainChannel) / 0.4);
+    --palette-outlinedHoverColor: var(--palette-600);
+    --palette-outlinedHoverBorder: var(--palette-300);
+    --palette-outlinedHoverBg: rgba(var(--palette-mainChannel) / 0.12);
+    --palette-outlinedActiveBg: rgba(var(--palette-mainChannel) / 0.24);
+    --palette-outlinedDisabledColor: rgba(var(--palette-mainChannel) / 0.6);
+    --palette-outlinedDisabledBorder: rgba(var(--palette-mainChannel) / 0.12);
+    --palette-softColor: var(--palette-600);
+    --palette-softBg: rgba(var(--palette-mainChannel) / 0.72);
+    --palette-softHoverColor: var(--palette-700);
+    --palette-softHoverBg: var(--palette-200);
+    --palette-softActiveBg: var(--palette-300);
+    --palette-softDisabledColor: rgba(var(--palette-mainChannel) / 0.6);
+    --palette-softDisabledBg: rgba(var(--palette-mainChannel) / 0.08);
+    --palette-solidColor: var(--palette-common-white);
+    --palette-solidBg: var(--palette-600);
+    --palette-solidHoverColor: var(--palette-common-white);
+    --palette-solidHoverBg: var(--palette-500);
+    --palette-solidActiveBg: var(--palette-500);
+    --palette-solidDisabledColor: rgba(var(--palette-mainChannel) / 0.6);
+    --palette-solidDisabledBg: rgba(var(--palette-mainChannel) / 0.08);
 }
 
-[psc='Joy/Variant/color-inversion'][psc='Joy/Variant/solid'] * {
+:where([psc='Joy/Variant/color-inversion'][psc='Joy/Variant/solid']) * {
     --Badge-ringColor: var(--palette-solidBg);
     --shadowChannel: var(--palette-darkChannel);
 
@@ -343,31 +343,31 @@ $palettes: (primary, neutral, danger, info, success, warning);
     --palette-text-secondary: var(--palette-100);
     --palette-text-tertiary: var(--palette-200);
     --palette-divider: rgba(var(--palette-lightChannel) / 0.32);
-    --variant-plainColor: var(--palette-50);
-    --variant-plainHoverColor: #fff;
-    --variant-plainHoverBg: rgba(var(--palette-lightChannel) / 0.5);
-    --variant-plainActiveBg: rgba(var(--palette-lightChannel) / 0.32);
-    --variant-plainDisabledColor: rgba(var(--palette-lightChannel) / 0.72);
-    --variant-outlinedColor: var(--palette-50);
-    --variant-outlinedBorder: rgba(var(--palette-lightChannel) / 0.5);
-    --variant-outlinedHoverColor: #fff;
-    --variant-outlinedHoverBorder: var(--palette-300);
-    --variant-outlinedHoverBg: rgba(var(--palette-lightChannel) / 0.12);
-    --variant-outlinedActiveBg: rgba(var(--palette-lightChannel) / 0.32);
-    --variant-outlinedDisabledColor: rgba(var(--palette-lightChannel) / 0.72);
-    --variant-outlinedDisabledBorder: rgba(255 255 255 / 0.2);
-    --variant-softColor: var(--palette-common-white);
-    --variant-softBg: rgba(var(--palette-lightChannel) / 0.24);
-    --variant-softHoverColor: var(--palette-common-white);
-    --variant-softHoverBg: rgba(var(--palette-lightChannel) / 0.36);
-    --variant-softActiveBg: rgba(var(--palette-lightChannel) / 0.16);
-    --variant-softDisabledColor: rgba(var(--palette-lightChannel) / 0.72);
-    --variant-softDisabledBg: rgba(var(--palette-lightChannel) / 0.1);
-    --variant-solidColor: var(--palette-500);
-    --variant-solidBg: var(--palette-common-white);
-    --variant-solidHoverColor: var(--palette-700);
-    --variant-solidHoverBg: var(--palette-common-white);
-    --variant-solidActiveBg: var(--palette-200);
-    --variant-solidDisabledColor: rgba(var(--palette-lightChannel) / 0.72);
-    --variant-solidDisabledBg: rgba(var(--palette-lightChannel) / 0.1);
+    --palette-plainColor: var(--palette-50);
+    --palette-plainHoverColor: #fff;
+    --palette-plainHoverBg: rgba(var(--palette-lightChannel) / 0.5);
+    --palette-plainActiveBg: rgba(var(--palette-lightChannel) / 0.32);
+    --palette-plainDisabledColor: rgba(var(--palette-lightChannel) / 0.72);
+    --palette-outlinedColor: var(--palette-50);
+    --palette-outlinedBorder: rgba(var(--palette-lightChannel) / 0.5);
+    --palette-outlinedHoverColor: #fff;
+    --palette-outlinedHoverBorder: var(--palette-300);
+    --palette-outlinedHoverBg: rgba(var(--palette-lightChannel) / 0.12);
+    --palette-outlinedActiveBg: rgba(var(--palette-lightChannel) / 0.32);
+    --palette-outlinedDisabledColor: rgba(var(--palette-lightChannel) / 0.72);
+    --palette-outlinedDisabledBorder: rgba(255 255 255 / 0.2);
+    --palette-softColor: var(--palette-common-white);
+    --palette-softBg: rgba(var(--palette-lightChannel) / 0.24);
+    --palette-softHoverColor: var(--palette-common-white);
+    --palette-softHoverBg: rgba(var(--palette-lightChannel) / 0.36);
+    --palette-softActiveBg: rgba(var(--palette-lightChannel) / 0.16);
+    --palette-softDisabledColor: rgba(var(--palette-lightChannel) / 0.72);
+    --palette-softDisabledBg: rgba(var(--palette-lightChannel) / 0.1);
+    --palette-solidColor: var(--palette-500);
+    --palette-solidBg: var(--palette-common-white);
+    --palette-solidHoverColor: var(--palette-700);
+    --palette-solidHoverBg: var(--palette-common-white);
+    --palette-solidActiveBg: var(--palette-200);
+    --palette-solidDisabledColor: rgba(var(--palette-lightChannel) / 0.72);
+    --palette-solidDisabledBg: rgba(var(--palette-lightChannel) / 0.1);
 }
